# world-cup-squad-advisor

./: .env.example  .gitignore  PROJECT_BUILD_LOG.md  README.md  main.py  pyproject.toml
app/: __init__.py
app/agent/: __init__.py  advisor_agent.py  player_report_agent.py  team_report_agent.py
app/database/: __init__.py  connection.py  create_tables.py  models.py  repository.py
app/domain/: ids.py
app/services/: advisor_presets.py  advisor_service.py  advisor_tools.py  ask_advisor.py  compare_teams.py  crawl_source_once.py  extract_wikipedia_all_teams.py  extract_wikipedia_team.py  generate_player_report.py  generate_player_reports.py  generate_team_report.py  generate_team_reports.py  player_queries.py  seed_reference_data.py  show_advisor_presets.py  show_advisor_session.py  show_advisor_sessions.py  show_raw_documents.py  show_recent_player_reports.py  show_recent_team_reports.py  show_reference_data.py  show_team_overview.py  show_team_squad.py  source_config.py  team_queries.py
app/web/: main.py  routes.py  viewmodels.py
app/web/static/css/: app.css
app/web/templates/: advisor.html  base.html  compare.html  dashboard.html  player_detail.html  players.html  team_detail.html  teams.html
config/: sources.toml
docker/: docker-compose.yml
docs/: ARCHITECTURE_PLAN.md  DB_SCHEMA_V1.md  PHASE1_SCAFFOLD_PLAN.md
