[project]
name = "world-cup-squad-advisor-lab"
version = "0.1.0"
description = "World Cup team and player decision-support system"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "lxml>=6.1.1",
    "openai>=2.43.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
